# security_transfer_platform

./: .gitmodules  CMakeLists.txt  README.md
codec/: CMakeLists.txt  genrpc.sh  proto_msg_dispatcher.cc  proto_msg_dispatcher.h  proto_msg_serialization.cc  proto_msg_serialization.h  rpc.pb.cc  rpc.pb.h  rpc.proto
codec/tests/: tcp_client_test.cc
src/: CMakeLists.txt
src/libstp/: CMakeLists.txt  atomic.h  tcp_event_server.cc  tcp_event_server.h  thread.cc  thread.h
src/libstp/tests/: CMakeLists.txt  atomic_test.cc  mutex_test.cc  tcp_server_test.cc  thread_test.cc
stpclient/: CMakeLists.txt  config_parser.cc  config_parser.h  main.cc  stp_client.cc  stp_client.h  stpclnt.json  stpclnt_msg_dispatcher.cc  stpclnt_msg_dispatcher.h
stpclient/tests/: thread_test.cc
stpcomm/: CMakeLists.txt  connection.cc  connection.h  event_notifier.cc  event_notifier.h  libevent_thread.cc  libevent_thread.h  stp_crypto_detail.cc  stp_crypto_detail.h  stp_crypto_negotiate.cc  stp_crypto_negotiate.h  stp_idx_mgr.cc  stp_idx_mgr.h  stp_token.cc  stp_token.h  tcp_event_client.cc  tcp_event_client.h  tcp_event_server.cc  tcp_event_server.h
stpcomm/json/: json.h  jsoncpp.cc
stpcomm/security/: aes_locl.h
stpcomm/tests/: CMakeLists.txt  atomic_test.cc  mutex_test.cc  tcp_client_test.cc  tcp_server_test.cc  token_test.cc
stpcrypto/: CMakeLists.txt  stp_crypto.cc  stp_crypto.h  stp_crypto_access.h  stp_msg_packer.cc  stp_msg_packer.h
stpcrypto/tests/: CMakeLists.txt  crypto_test.cc
stpinterface/: CMakeLists.txt  stp_interface.cc  stp_interface.h
stpserver/: CMakeLists.txt  config_parser.cc  config_parser.h  main.cc  stp_dao.cc  stp_dao.h  stp_server.cc  stp_server.h  stpsvr.json  stpsvr_msg_dispatcher.cc  stpsvr_msg_dispatcher.h
stpserver/tests/: CMakeLists.txt  tcp_server_test.cc
stputil/: CMakeLists.txt  connection.h  event_notifier.h  json_parser.cc  json_parser.h  mutex.cc  mutex.h  mysql_connection_pool.cc  mysql_connection_pool.h  shm.cc  shm.h  singleton.h  tcp_event_client.cc  tcp_event_server.cc
stputil/security/: aes.h  aes_core.c  base64.cpp  base64.h
stputil/tests/: CMakeLists.txt  atomic_test.cc  mutex_test.cc  tcp_client_test.cc  tcp_server_test.cc  thread_test.cc
